[package]
name = "hmac"
version = "0.10.0"
description = "Generic implementation of Hash-based Message Authentication Code (HMAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "hmac", "digest"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
crypto-mac = { git = "https://github.com/fortelabsinc/traits", rev="ca0ea3064459418a7a8f9945a5eda178982ad260" }
digest = "0.9"

[dev-dependencies]
crypto-mac = { git = "https://github.com/fortelabsinc/traits", rev="ca0ea3064459418a7a8f9945a5eda178982ad260", features = ["dev"] }
md-5 = { version = "0.9", default-features = false }
sha2 = { version = "0.9", default-features = false }

[features]
std = ["crypto-mac/std"]
