[package]
name = "hmac"
version = "0.7.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Generic implementation of Hash-based Message Authentication Code (HMAC)"
documentation = "https://docs.rs/hmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "hmac", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-mac = { git = "https://github.com/fortelabsinc/traits", rev="eefd93f7f041b6a42d265a0eb2d6d87460dbe13e" }
digest = "0.8"

[dev-dependencies]
crypto-mac = { git = "https://github.com/fortelabsinc/traits", rev="eefd93f7f041b6a42d265a0eb2d6d87460dbe13e", features = ["dev"] }
md-5 = { version = "0.8", default-features = false }
sha2 = { version = "0.8", default-features = false }

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
