[package]
name = "pmac"
version = "0.2.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "Generic implementation of Parallelizable Message Authentication Code"
documentation = "https://docs.rs/pmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "pmac"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-mac = { git = "https://github.com/fortelabsinc/traits", rev="eefd93f7f041b6a42d265a0eb2d6d87460dbe13e" }
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }
dbl = "0.2"

[dev-dependencies]
crypto-mac = { git = "https://github.com/fortelabsinc/traits", rev="eefd93f7f041b6a42d265a0eb2d6d87460dbe13e", features = ["dev"] }
aes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="6c5232fce16396363cdecf71dd5595be4c2ed426" }

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
